--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-          <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      integrity="sha512-oUqC9wCuWHa3gwxObn2ymlk/wEYBLETymFcpnSUsctNk6heAQ7Ez+KQEiC5EvhczHxVh9Yx8RJWb1x1oGfut2g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      <!-- Font Awesome CDN link removed; using npm import in src/index.js -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
